JavaFunctionalCpp/grammar.txt

program => statement* EOF

statement => expressionStatement | printStatement

expressionStatement => expression ";"
printStatement => "print " expression ";"  //temporary

expression => binary | unary | literal

binary  => expression operator expression
unary   => "-" unary | primary
primary => NUMBER | "true" | "false"

operator => "+" | "-" | "*" | "/" | "==" | "!=" | "&&" | "||" 
